# OpenSOVD-flash-client

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTION.md  Cargo.toml  Dockerfile  Dockerfile.mock  LICENSE  NOTICE  README.md  server.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: improvement.md
.github/PULL_REQUEST_TEMPLATE/: improvement.md
.github/workflows/: ci.yml
crates/sovd-cli/: Cargo.toml
crates/sovd-cli/src/: config.rs  main.rs  output.rs
crates/sovd-cli/src/commands/: capabilities.rs  components.rs  config_cmd.rs  diag.rs  flash.rs  health.rs  jobs.rs  logs.rs  mod.rs  monitor.rs  plugins.rs
crates/sovd-client/: Cargo.toml
crates/sovd-client/src/: client.rs  discovery.rs  lib.rs
crates/sovd-client/tests/: integration_mock.rs
crates/sovd-core/: Cargo.toml
crates/sovd-core/src/: error.rs  lib.rs  model.rs  traits.rs
crates/sovd-core/src/model/: capability.rs  component.rs  datatypes.rs  job.rs
crates/sovd-observe/: Cargo.toml
crates/sovd-observe/src/: events.rs  lib.rs  report.rs  setup.rs
crates/sovd-plugin/: Cargo.toml
crates/sovd-plugin/src/: lib.rs  manager.rs  registry.rs  spi.rs
crates/sovd-workflow/: Cargo.toml
crates/sovd-workflow/src/: controller.rs  engine.rs  lib.rs  state_machine.rs
docs/: REVIEW.md
docs/adr/: 0001-open-core.md  0002-capability-driven-workflows.md  0003-plugin-isolation.md  0004-sovd-only-communication.md  0005-mandatory-test-coverage.md  0006-gui-technology.md
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
scripts/: check-tests.sh
sovd-gui/: index.html  package-lock.json  package.json
sovd-gui/src/: App.tsx  index.css  main.tsx
sovd-gui/src-tauri/: Cargo.toml  tauri.conf.json
sovd-gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
sovd-gui/src/components/: ConnectionBar.tsx  PhaseIndicator.tsx  Toast.tsx
sovd-gui/src/lib/: tauri.ts
sovd-gui/src/pages/: BulkFlash.tsx  ComponentExplorer.tsx  Dashboard.tsx  Diagnostics.tsx  DtcViewer.tsx  FlashWizard.tsx  JobMonitor.tsx  LiveMonitoring.tsx  LogViewer.tsx  PluginManager.tsx  Reports.tsx  Settings.tsx
sovd-gui/src/stores/: connectionStore.ts  jobStore.ts  settingsStore.ts
sovd-gui/src/types/: index.ts
