[package]
name = "sovd-client"
description = "SOVD REST API client with capability discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sovd-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
