[package]
name = "sovd-core"
description = "Core types and models for the OpenSOVD Flash Client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
