[package]
name = "sovd-observe"
description = "Observability: logging, tracing and report generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sovd-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
