[package]
name = "sovd-workflow"
description = "Workflow engine, job controller and state machine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sovd-core = { workspace = true }
sovd-client = { workspace = true }
sovd-plugin = { workspace = true }
sovd-observe = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
