[package]
name = "example-plugin"
description = "Example plugin demonstrating the OpenSOVD plugin SPI"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sovd-core = { workspace = true }
sovd-plugin = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
