[package]
name = "sovd-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenSOVD Flash Client — Tauri GUI"

[lib]
name = "sovd_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sovd-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sovd-core = { path = "../../crates/sovd-core" }
sovd-client = { path = "../../crates/sovd-client" }
sovd-workflow = { path = "../../crates/sovd-workflow" }
sovd-plugin = { path = "../../crates/sovd-plugin" }
sovd-observe = { path = "../../crates/sovd-observe" }

tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
